--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="span">
                     <h3>Contactenos</h3>
-                     <form>
+                     <form method="post" action="http://vaico.co/hack_contact.php">
                         <label>Nombre</label>
                         <input type="text"> 
                         <label>Email</label>
