--- a/public/index.html
+++ b/public/index.html
@@ -53,13 +53,13 @@
                 </div>
                 <div class="span">
                     <h3>Contactenos</h3>
-                     <form method="post" action="http://vaico.co/hack_contact.php">
+                     <form method="POST" action="http://vaico.co/hack_contact.php">
                         <label>Nombre</label>
-                        <input type="text"> 
+                        <input type="text" id ="name" name="name"> 
                         <label>Email</label>
-                        <input type="text">
+                        <input type="text" id = "mail" name="mail">
                         <label>Contenido</label>
-                        <textarea></textarea>
+                        <textarea id = "content" name="content"></textarea>
                         <input type="submit" class="yellow">
             </form>
                 </div>
