--- a/public/index.html
+++ b/public/index.html
@@ -28,15 +28,16 @@
                       hackealaciudad.co
                   </h2>
                   <p id="desc">
-                ...por unos mejores servicios p&uacute;blicos!!!
+                ...por unos mejores servicios p&uacute;blicos construiremos Apps los fines de semanas!!!
                 
             </p>
+            <p><em>#opendata #egoverment #openapps #civicapps</em></p>
             </div>
             <nav class="navBar">
                 <ul>
                     <li><a href="movilidad/" class="redondo ama"><span class="negro">May 21 - 2013</span><p class="negro">movilidad</p></a></li>
-                    <li><a href="#" class="redondo rojo"><span class="negro">May 21 - 2013</span><p class="negro">ambiente</p></a></li>
-                    <li><a href="#" class="redondo ama"><span class="negro">May 21 - 2013</span><p class="negro">turismo</p></a></li>
+                    <li><a href="#" class="redondo rojo"><span class="negro">muy pronto</span><p class="negro">ambiente</p></a></li>
+                    <li><a href="#" class="redondo ama"><span class="negro">muy pronto</span><p class="negro">turismo</p></a></li>
                 </ul>
             </nav>
 
