--- a/public/movilidad/index.html
+++ b/public/movilidad/index.html
@@ -88,11 +88,11 @@
                     <h3>Contactenos</h3>
                      <form method="POST" action="http://vaico.co/hack_contact.php">
                         <label>Nombre</label>
-                        <input type="text" id ="name" name="name"> 
+                        <input type="text" id ="name" name="name" required="true"> 
                         <label>Email</label>
-                        <input type="text" id = "mail" name="mail">
+                        <input type="email" id = "mail" name="mail" required="true">
                         <label>Contenido</label>
-                        <textarea id = "content" name="content"></textarea>
+                        <textarea id = "content" name="content" required="true"></textarea>
                         <input type="submit" class="yellow">
             </form>
                 </div>
