--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link href='http://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Playball' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -50,6 +51,7 @@
                     <h3>
                         Con el apoyo:
                     </h3>
+                    <p class="lanza">Lanzacohete.co</p>
                     
                 </div>
                 <div class="span">
